// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getGraphQLEnumType creates an enum type from numeric enum 1`] = `
Object {
  "astNode": undefined,
  "description": undefined,
  "extensionASTNodes": Array [],
  "extensions": undefined,
  "name": "ANumericEnum",
  "values": Object {
    "Down": Object {
      "astNode": undefined,
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": undefined,
      "value": 3,
    },
    "Left": Object {
      "astNode": undefined,
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": undefined,
      "value": 0,
    },
    "Right": Object {
      "astNode": undefined,
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": undefined,
      "value": 1,
    },
    "Up": Object {
      "astNode": undefined,
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": undefined,
      "value": 2,
    },
  },
}
`;

exports[`getGraphQLEnumType creates an enum type from numeric enum using "key as value" 1`] = `
Object {
  "astNode": undefined,
  "description": undefined,
  "extensionASTNodes": Array [],
  "extensions": undefined,
  "name": "ANumericEnumUsingKeyAsValue",
  "values": Object {
    "Down": Object {
      "astNode": undefined,
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": undefined,
      "value": "Down",
    },
    "Left": Object {
      "astNode": undefined,
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": undefined,
      "value": "Left",
    },
    "Right": Object {
      "astNode": undefined,
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": undefined,
      "value": "Right",
    },
    "Up": Object {
      "astNode": undefined,
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": undefined,
      "value": "Up",
    },
  },
}
`;

exports[`getGraphQLEnumType creates an enum type from string enum 1`] = `
Object {
  "astNode": undefined,
  "description": undefined,
  "extensionASTNodes": Array [],
  "extensions": undefined,
  "name": "AStringEnum",
  "values": Object {
    "Down": Object {
      "astNode": undefined,
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": undefined,
      "value": "DOWN",
    },
    "Left": Object {
      "astNode": undefined,
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": undefined,
      "value": "LEFT",
    },
    "Right": Object {
      "astNode": undefined,
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": undefined,
      "value": "RIGHT",
    },
    "Up": Object {
      "astNode": undefined,
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": undefined,
      "value": "UP",
    },
  },
}
`;

exports[`getGraphQLEnumType creates an enum type from string enum using "key as value" 1`] = `
Object {
  "astNode": undefined,
  "description": undefined,
  "extensionASTNodes": Array [],
  "extensions": undefined,
  "name": "AStringEnumUsingKeyAsValue",
  "values": Object {
    "Down": Object {
      "astNode": undefined,
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": undefined,
      "value": "Down",
    },
    "Left": Object {
      "astNode": undefined,
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": undefined,
      "value": "Left",
    },
    "Right": Object {
      "astNode": undefined,
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": undefined,
      "value": "Right",
    },
    "Up": Object {
      "astNode": undefined,
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": undefined,
      "value": "Up",
    },
  },
}
`;
